...
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acc_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/acc_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/acc_password_input"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acc_password"
...

            <EditText
                android:id="@+id/acc_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:nextFocusForward="@id/acc_password_confirm_input"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acc_password_confirm"
...

            <EditText
                android:id="@+id/acc_password_confirm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:nextFocusForward="@id/acc_termsofservice_checkbox"
                android:hint="@string/confirm_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/acc_termsofservice_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:nextFocusForward="@id/acc_is_over_18_checkbox"
            android:text="@string/termsofservice_accept"/>

        <CheckBox
            android:id="@+id/acc_is_over_18_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:nextFocusForward="@id/confirm_button"
            android:text="@string/i_am_over_eighteen"/>

        <CheckBox
            android:id="@+id/register_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/register_new_account"
            android:nextFocusForward="@id/confirm_button"
...
