...
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prof_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/prof_nickname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:nextFocusForward="@id/prof_birthday_input"
            android:hint="@string/nickname"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prof_birthday"
...

        <EditText
            android:id="@+id/prof_birthday_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|date"
            android:nextFocusForward="@id/prof_description_input"
            android:hint="@string/birthday_dd_mm"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prof_description"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:lines="3"
            android:maxLines="5"
            android:nextFocusForward="@id/prof_create_button"
            android:hint="@string/description"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/prof_community_marker"
...
