<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_selection_area"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:layout_height="48dp">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="#fff"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:text="@string/placeholder_short"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profile_remove"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:padding="6dp"
        android:layout_centerVertical="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/close"
        android:tint="#fff"
        android:contentDescription="@string/remove_profile" />

</RelativeLayout>